<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ButtonProgress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#959595"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="608dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/organizador_de_rutinas"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/Imagen"
            app:srcCompat="@drawable/ic__975689" />

        <Button
            android:id="@+id/buttonRR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#94CCCC"
            android:fontFamily="serif"
            android:onClick="RegistrarRutina"
            android:text="@string/registrar_rutina"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/ButtonVHDR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#94CCCC"
            android:fontFamily="serif"
            android:onClick="HorarioRutina"
            android:text="@string/ver_horario_de_rutina"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/buttonP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#94CCCC"
            android:fontFamily="serif"
            android:onClick="Progreso"
            android:text="@string/progreso"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/ButtonConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#94CCCC"
            android:fontFamily="serif"
            android:onClick="Configuracion"
            android:text="@string/configuracion"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/buttonAcercade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#94CCCC"
            android:baselineAligned="false"
            android:fontFamily="serif"
            android:onClick="AcercaDe"
            android:text="@string/acerca_de"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#50A1A1"
            android:text="@string/Creado_por_kevin"
            android:textSize="20sp"
            app:cornerRadius="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>