<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Spinner
        android:id="@+id/SpinnerRepeticiones"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="#A3A5A5"
        android:contentDescription="@string/REPETICIONES"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerRutina" />

    <Spinner
        android:id="@+id/SpinnerSeries"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="88dp"
        android:background="#A3A5A5"
        android:contentDescription="@string/SERIES"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerRepeticiones"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/SpinnerDia"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="172dp"
        android:background="#A3A5A5"
        android:contentDescription="@string/DIA"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/SpinnerRutina"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="#A3A5A5"
        android:contentDescription="@string/RUTINA"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerMusculo" />

    <Spinner
        android:id="@+id/SpinnerMusculo"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="#A3A5A5"
        android:contentDescription="@string/Musculo"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerDia" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#94CCCC"
        android:fontFamily="serif"
        android:onClick="Guardar"
        android:text="@string/guardar"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerSeries" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Diadeentreno"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerDia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Musculoaentrenar"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerMusculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerDia"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rutinaahacer"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerRutina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerMusculo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumRep"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerRepeticiones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerRutina" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numSeries"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerSeries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerRepeticiones" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/registrar_rutina"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>