<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    >

    <GridLayout
        android:layout_width="358dp"
        android:layout_height="597dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/Peso" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/Estatura" />

        <EditText
            android:id="@+id/TxtEstatura"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/Estatura"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/TextPeso"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Peso"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="calcular"
            android:text="@string/Calcular" />

        <TextView
            android:id="@+id/TxtResultado"
            android:layout_width="168dp"
            android:layout_height="78dp"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/s"
            android:textColor="#000000"
            android:baselineAligned="false"
            android:fontFamily="serif"
            android:textSize="40sp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0">

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pis" />
        </RadioGroup>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

