<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <RelativeLayout
        android:layout_width="346dp"
        android:layout_height="597dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBoxsaludable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="decir"
            android:text="@string/checkbox" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxsaludable"
            android:layout_marginStart="-91dp"
            android:layout_marginTop="47dp"
            android:layout_toEndOf="@+id/checkBoxsaludable"
            android:text="@string/Respuesta" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="176dp"
            android:layout_height="306dp"
            android:layout_below="@+id/textView11"
            android:layout_marginStart="-102dp"
            android:layout_marginTop="84dp"
            android:layout_toEndOf="@+id/textView11"
            android:contentDescription="@string/IMAGEN2"
            app:srcCompat="@drawable/ic__93955" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>